<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
            android:title="@string/pref_user_name"
            android:summary="@string/pref_user_name_summary"
            android:key="prefUsername"/>
        <ListPreference
            android:key="tab1"
            android:entries="@array/category_list2"
            android:summary="@string/tabtitle1"
            android:entryValues="@array/category_list2"
            android:title="@string/tab1"
            android:defaultValue="@string/general"/>
        <ListPreference
            android:key="tab2"
            android:entries="@array/category_list2"
            android:summary="@string/tabtitle1"
            android:entryValues="@array/category_list2"
            android:title="@string/tab2"
            android:defaultValue="@string/technology"/>
        <ListPreference
            android:key="tab3"
            android:entries="@array/category_list2"
            android:summary="@string/tabtitle1"
            android:entryValues="@array/category_list2"
            android:title="@string/tab3"
            android:defaultValue="@string/science"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>