<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:id="@+id/topic_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/topic_help"
        android:inputType="textPersonName" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <RadioButton
            android:id="@+id/newest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:layout_marginTop="-60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language" />

        <Spinner
            android:id="@+id/lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/language_list">

        </Spinner>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="23dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_search_help"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"/>

</LinearLayout>