<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp">
    
    <EditText
        android:id="@+id/headline_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/topic_help"/>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start">

            <RadioButton
                android:id="@+id/sources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sources"
                android:checked="true" />


            <RadioButton
                android:id="@+id/contries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countries"/>
        </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:layout_marginTop="-60sp">

        <Spinner
            android:id="@+id/source_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/sources_list"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:entries="@array/country_list" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:text="@string/categories"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/category_list" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advance_help"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="10dp"/>

</LinearLayout>